==> Ayumuc/XT_DTU/W5500/w5500.c <==
#include "sys.h"
#include "w5500.h"
#include "delay.h"
#include "string.h"
#include "FreeRTOS.h"
#include "semphr.h"
#define TCP_SERVER	0x00	//TCP服务器模式
#define TCP_CLIENT	0x01	//TCP客户端模式
#define UDP_MODE	0x02	//UDP(广播)模式
#define S_INIT		0x01	//端口完成初始化
#define S_CONN		0x02	//端口完成连接,可以正常传输数据
#define S_RECEIVE	 0x01	//端口接收到一个数据包
#define S_TRANSMITOK 0x02	//端口发送一个数据包完成

void Write_W5500_1Byte(unsigned short reg, unsigned char dat)
{
	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平

	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM1|RWB_WRITE|COMMON_R);//通过SPI1写控制字节,1个字节数据长度,写数据,选择通用寄存器
	SPI1_Send_Byte(dat);//写1个字节数据

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET); //置W5500的SCS为高电平
}

void Write_W5500_2Byte(unsigned short reg, unsigned short dat)
{
	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平
		
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM2|RWB_WRITE|COMMON_R);//通过SPI1写控制字节,2个字节数据长度,写数据,选择通用寄存器
	SPI1_Send_Short(dat);//写16位数据

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET); //置W5500的SCS为高电平
}

void Write_W5500_nByte(unsigned short reg, unsigned char *dat_ptr, unsigned short size)
{
	unsigned short i;

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平	
		
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(VDM|RWB_WRITE|COMMON_R);//通过SPI1写控制字节,N个字节数据长度,写数据,选择通用寄存器

	for(i=0;i<size;i++)//循环将缓冲区的size个字节数据写入W5500
	{
		SPI1_Send_Byte(*dat_ptr++);//写一个字节数据
	}

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET); //置W5500的SCS为高电平
}

void Write_W5500_SOCK_1Byte(SOCKET s, unsigned short reg, unsigned char dat)
{
	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平	
		
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM1|RWB_WRITE|(s*0x20+0x08));//通过SPI1写控制字节,1个字节数据长度,写数据,选择端口s的寄存器
	SPI1_Send_Byte(dat);//写1个字节数据

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET); //置W5500的SCS为高电平
}

void Write_W5500_SOCK_2Byte(SOCKET s, unsigned short reg, unsigned short dat)
{
	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平
	
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM2|RWB_WRITE|(s*0x20+0x08));//通过SPI1写控制字节,2个字节数据长度,写数据,选择端口s的寄存器
	SPI1_Send_Short(dat);//写16位数据

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET); //置W5500的SCS为高电平
}

void Write_W5500_SOCK_4Byte(SOCKET s, unsigned short reg, unsigned char *dat_ptr)
{
	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平
			
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM4|RWB_WRITE|(s*0x20+0x08));//通过SPI1写控制字节,4个字节数据长度,写数据,选择端口s的寄存器

	SPI1_Send_Byte(*dat_ptr++);//写第1个字节数据
	SPI1_Send_Byte(*dat_ptr++);//写第2个字节数据
	SPI1_Send_Byte(*dat_ptr++);//写第3个字节数据
	SPI1_Send_Byte(*dat_ptr++);//写第4个字节数据

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET);//置W5500的SCS为高电平
}

unsigned char Read_W5500_1Byte(unsigned short reg)
{
	unsigned char i;

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平
			
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM1|RWB_READ|COMMON_R);//通过SPI1写控制字节,1个字节数据长度,读数据,选择通用寄存器
	
//	i=SPI_I2S_ReceiveData(&SPI1_Handler);
//	SPI1_Send_Byte(0x00);//发送一个哑数据
//	i=SPI_I2S_ReceiveData(&SPI1_Handler);//读取1个字节数据
	i=SPI1_ReadWriteByte(0x00);
	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET);//置W5500的SCS为高电平
	return i;//返回读取到的寄存器数据
}

unsigned char Read_W5500_SOCK_1Byte(SOCKET s, unsigned short reg)
{
	unsigned char i;

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平
			
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM1|RWB_READ|(s*0x20+0x08));//通过SPI1写控制字节,1个字节数据长度,读数据,选择端口s的寄存器
//	i=SPI_I2S_ReceiveData(&SPI1_Handler);
//	SPI1_Send_Byte(0x00);//发送一个哑数据
//	i=SPI_I2S_ReceiveData(&SPI1_Handler);//读取1个字节数据
	i=SPI1_ReadWriteByte(0x00); 

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET);//置W5500的SCS为高电平
	return i;//返回读取到的寄存器数据
}

unsigned short Read_W5500_SOCK_2Byte(SOCKET s, unsigned short reg)
{
	unsigned short i,j;

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平
			
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM2|RWB_READ|(s*0x20+0x08));//通过SPI1写控制字节,2个字节数据长度,读数据,选择端口s的寄存器
//	i=SPI_I2S_ReceiveData(&SPI1_Handler);
//	SPI1_Send_Byte(0x00);//发送一个哑数据
//	i=SPI_I2S_ReceiveData(&SPI1_Handler);//读取高位数据
//	SPI1_Send_Byte(0x00);//发送一个哑数据
//	i*=256;
//	i+=SPI_I2S_ReceiveData(&SPI1_Handler);//读取低位数据
	i=SPI1_ReadWriteByte(0x00);
	i*=256;
	j=SPI1_ReadWriteByte(0x00);
	i+=j;
	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET);//置W5500的SCS为高电平
	return i;//返回读取到的寄存器数据
}

unsigned short Read_SOCK_Data_Buffer(SOCKET s, unsigned char *dat_ptr)
{
	unsigned short rx_size;
	unsigned short offset, offset1;
	unsigned short i;
	unsigned char j;

	rx_size=Read_W5500_SOCK_2Byte(s,Sn_RX_RSR);
	if(rx_size==0) return 0;//没接收到数据则返回
	if(rx_size>1460) rx_size=1460;

	offset=Read_W5500_SOCK_2Byte(s,Sn_RX_RD);
	offset1=offset;
	offset&=(S_RX_SIZE-1);//计算实际的物理地址

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平

	SPI1_Send_Short(offset);//写16位地址
	SPI1_Send_Byte(VDM|RWB_READ|(s*0x20+0x18));//写控制字节,N个字节数据长度,读数据,选择端口s的寄存器
	//j=SPI_I2S_ReceiveData(&SPI1_Handler);
	if((offset+rx_size)<S_RX_SIZE)//如果最大地址未超过W5500接收缓冲区寄存器的最大地址
	{
		for(i=0;i<rx_size;i++)//循环读取rx_size个字节数据
		{
			j=SPI1_ReadWriteByte(0x00);//读取数据
			*dat_ptr=j;//将读取到的数据保存到数据保存缓冲区
			dat_ptr++;//数据保存缓冲区指针地址自增1
		}
		//offset1+=rx_size;//更新实际物理地址,即下次读取接收到的数据的起始地址
	}
	else//如果最大地址超过W5500接收缓冲区寄存器的最大地址
	{
		offset=S_RX_SIZE-offset;
		for(i=0;i<offset;i++)//循环读取出前offset个字节数据
		{
			j=SPI1_ReadWriteByte(0x00);//读取数据
			*dat_ptr=j;//将读取到的数据保存到数据保存缓冲区
			dat_ptr++;//数据保存缓冲区指针地址自增1
		}
		HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET); //置W5500的SCS为高电平
		delay_us(50000);
		HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平

		SPI1_Send_Short(0x00);//写16位地址
		SPI1_Send_Byte(VDM|RWB_READ|(s*0x20+0x18));//写控制字节,N个字节数据长度,读数据,选择端口s的寄存器
		//j=SPI_I2S_ReceiveData(&SPI1_Handler);//读取数据
		for(;i<rx_size;i++)//循环读取后rx_size-offset个字节数据
		{
			j=SPI1_ReadWriteByte(0x00);//读取数据
			*dat_ptr=j;//将读取到的数据保存到数据保存缓冲区
			dat_ptr++;//数据保存缓冲区指针地址自增1
		}
		//offset1=offset1+rx_size-S_RX_SIZE;//更新实际物理地址,即下次读取接收到的数据的起始地址
	}
	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET); //置W5500的SCS为高电平
	offset1+=rx_size;//更新实际物理地址,即下次读取接收到的数据的起始地址
	Write_W5500_SOCK_2Byte(s,Sn_RX_RD,offset1);
	Write_W5500_SOCK_1Byte(s,Sn_CR,OPEN);//打开Socket*/
	//Write_W5500_SOCK_1Byte(s, Sn_CR, RECV);//发送启动接收命令
	return rx_size;//返回接收到数据的长度
}

void Write_SOCK_Data_Buffer(SOCKET s, unsigned char *dat_ptr, unsigned short size)
{
	unsigned short offset,offset1;
	unsigned short i;

	//如果是UDP模式,可以在此设置目的主机的IP和端口号
	if((Read_W5500_SOCK_1Byte(s,Sn_MR)&0x0f) != SOCK_UDP)//如果Socket打开失败
	{		
		Write_W5500_SOCK_4Byte(s, Sn_DIPR, UDP_DIPR);//设置目的主机IP  		
		Write_W5500_SOCK_2Byte(s, Sn_DPORTR, UDP_DPORT[0]*256+UDP_DPORT[1]);//设置目的主机端口号				
	}

	offset=Read_W5500_SOCK_2Byte(s,Sn_TX_WR);
	offset1=offset;
	offset&=(S_TX_SIZE-1);//计算实际的物理地址

	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平

	SPI1_Send_Short(offset);//写16位地址
	SPI1_Send_Byte(VDM|RWB_WRITE|(s*0x20+0x10));//写控制字节,N个字节数据长度,写数据,选择端口s的寄存器

	if((offset+size)<S_TX_SIZE)//如果最大地址未超过W5500发送缓冲区寄存器的最大地址
	{
		for(i=0;i<size;i++)//循环写入size个字节数据
		{
			SPI1_Send_Byte(*dat_ptr++);//写入一个字节的数据		
		}
	}
	else//如果最大地址超过W5500发送缓冲区寄存器的最大地址
	{
		offset=S_TX_SIZE-offset;
		for(i=0;i<offset;i++)//循环写入前offset个字节数据
		{
			SPI1_Send_Byte(*dat_ptr++);//写入一个字节的数据
		}
		HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET); //置W5500的SCS为高电平

		HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_RESET);//置W5500的SCS为低电平

		SPI1_Send_Short(0x00);//写16位地址
		SPI1_Send_Byte(VDM|RWB_WRITE|(s*0x20+0x10));//写控制字节,N个字节数据长度,写数据,选择端口s的寄存器

		for(;i<size;i++)//循环写入size-offset个字节数据
		{
			SPI1_Send_Byte(*dat_ptr++);//写入一个字节的数据
		}
	}
	HAL_GPIO_WritePin(W5500_SCS_PORT,W5500_SCS,GPIO_PIN_SET);//置W5500的SCS为高电平

	offset1+=size;//更新实际物理地址,即下次写待发送数据到发送数据缓冲区的起始地址
	Write_W5500_SOCK_2Byte(s, Sn_TX_WR, offset1);
	Write_W5500_SOCK_1Byte(s, Sn_CR, SEND);//发送启动发送命令				
}

void W5500_Hardware_Reset(void)
{
	HAL_GPIO_WritePin(W5500_RST_PORT,W5500_RST,GPIO_PIN_RESET);
	delay_us(50000);
	HAL_GPIO_WritePin(W5500_RST_PORT,W5500_RST,GPIO_PIN_SET);//复位引脚拉高
	delay_us(200000);
	while((Read_W5500_1Byte(PHYCFGR)&LINK)==0);//等待以太网连接完成
}
